Added GitHub activity widget.

--- a/assets/less/768.less
+++ b/assets/less/768.less
@@ -9,4 +9,10 @@
 		width: 20%;
 	}
 }
+// GitHub Activity
+// --------------------------------------------------
+#github-activity {
+  display: block;
+  width: 100%;
+}
 // VENDOR-SPECIFIC ============================================
