--- a/assets/less/992.less
+++ b/assets/less/992.less
@@ -20,6 +20,11 @@
 body.page .toc {
   top: 17.5em;
 }
+// GitHub Activity
+// --------------------------------------------------
+#github-activity {
+  width: 500px;
+}
 /* Image Grid ============================================== */
 .image-grid {
 	li {
