--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -410,3 +410,9 @@ body {
 #goog-wm-sb {
 	.btn();
 }
+// GitHub Activity
+// --------------------------------------------------
+#github-activity {
+  display: none;
+  margin: 20px auto 10px;
+}
