--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,13 +23,16 @@
 </div>
 
 <div id="index" itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/Blog">
-  <h3><a href="{{ site.url}}/articles/">News</a></h3>
+  <h3><a href="{{ site.url}}/articles/">Latest News</a></h3>
   {% for post in site.posts limit:5 %}
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
     <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
     <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 150 }}{% endif %}</p>
   </article>
   {% endfor %}
+  <h3>&nbsp;</h3>
+  <iframe id="github-activity" src="http://tylerlh.github.com/github-latest-commits-widget/?username=adiwg&repo=mdTranslator&limit=5"
+  allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
 </div><!-- /#index -->
 
 <div class="footer-wrap">
