--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -57,6 +57,7 @@ figcaption {
 	.font(14);
 	line-height: 1.3;
 	color: lighten(@text-color, 10);
+	text-align: right;
 }
 
 // Feature Image Caption
