--- a/lib/adiwg/mdtranslator/writers/html/templates/_dateTime.liquid
+++ b/lib/adiwg/mdtranslator/writers/html/templates/_dateTime.liquid
@@ -1,5 +1,3 @@
-{% for dateItem in myDateTime %}
- *Date-Time:* {{ dateItem.dateTime }} <br>
- *Date Type:* {{ dateItem.dateType }} <br>
- *Date Resolution:* {{ dateItem.dateResolution }}
-{% endfor %}
+> *Date-Time:* {{ myDateTime.dateTime }} <br>
+> *Date Type:* {{ myDateTime.dateType }} <br>
+> *Date Resolution:* {{ myDateTime.dateResolution }}
