--- a/lib/adiwg/mdtranslator/writers/html/templates/_identifier.liquid
+++ b/lib/adiwg/mdtranslator/writers/html/templates/_identifier.liquid
@@ -1,5 +1,6 @@
->> *Identifier:* {{ identifier.identifier }} <br>
->> *Identifier type:* {{ identifier.identifierType }} <br>
- {% if identifier.citation %}
->> *Identifier citation:* {% include 'citation' %}
- {% endif %}
+> *Identifier:* {{ identifier.identifier }} <br>
+> *Identifier type:* {{ identifier.identifierType }} <br>
+
+{% if identifier.citation %}
+> *Identifier citation:* {% include 'citation' %}
+{% endif %}
