--- a/lib/adiwg/mdtranslator/writers/html/templates/_body.liquid
+++ b/lib/adiwg/mdtranslator/writers/html/templates/_body.liquid
@@ -1,5 +1,11 @@
 # mdTranslator Metadata Report
 
+## Metadata Source
 {% include 'metadataSource' %}
 
+---
+
+## Metadata Information
 {% include 'metadataInfo' %}
+
+---
