--- a/lib/adiwg/mdtranslator/writers/html/templates/_metadataInfo.liquid
+++ b/lib/adiwg/mdtranslator/writers/html/templates/_metadataInfo.liquid
@@ -1,11 +1,10 @@
-## Metadata Information
 
-> ### Metadata Identifier
+### Metadata Identifier
 {% assign identifier = metadata.metadataInfo.metadataId %}
-{% include 'identifier' with identifier %} <br>
+{% include 'identifier' with identifier %}
 
-> ### Parent Metadata
+### Parent Metadata
 {% if metadata.metadataInfo.parentMetadata %}
-   {% assign myCitation = metadata.metadataInfo.parentMetadata %}
-   {% include 'citation' with myCitation %}
+{% assign myCitation = metadata.metadataInfo.parentMetadata %}
+{% include 'citation' with myCitation %}
 {% endif %}
