--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -6,8 +6,8 @@
     html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
     body{
-        color: #444;
-        font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+        color: #202020;
+        font-family: Consolas, sans-serif;
         font-size: small;
         line-height: 1.3em;
         padding: 1em;
@@ -38,6 +38,7 @@
     }
 
     h1,h2,h3,h4,h5,h6{
+        font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
         font-weight: normal;
         color: #111;
         line-height: 1em;
@@ -50,11 +51,16 @@
     h5{ font-size: 1em; }
     h6{ font-size: 0.9em; }
 
-    blockquote{
+    em{
+        font-family: Tahoma, Arial, Verdana, sans-serif;
         color: #666666;
+        font-size: smaller;
+    }
+
+    blockquote{
         margin: 0;
         padding-left: 2em;
-        border-left: 0.5em #EEE solid;
+        border-left: 0.5em #e0e0e0 solid;
     }
     hr { display: block; height: 2px; border: 0; border-top: 1px solid #aaa;border-bottom: 1px solid #eee; margin: 1em 0; padding: 0; }
     pre, code, kbd, samp { color: #000; font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 0.98em; }
