- updates to html writer

--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -62,7 +62,8 @@
     em{
         font-family: Tahoma, Arial, Verdana, sans-serif;
         color: #666666;
-        font-size: smaller;
+        font-size: small;
+        padding-right: 1em;
     }
 
     blockquote{
