--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -43,16 +43,14 @@
         font-weight: normal;
         color: #111;
         margin: 1em;
-        line-height: 1em;
+        line-height: .5em;
     }
 
     h1,.h1{ font-size: 2.5em; }
     h2,.h2{ font-size: 2em; }
     h3,.h3{ font-size: 1.5em; }
     h4,.h4{ font-size: 1.2em; }
-    h5,.h5{ font-size: 1em;
-        line-height: .5em;
-    }
+    h5,.h5{ font-size: 1em; }
     h6,.h6{
         font-size: 0.9em;
         font-weight: bold;
