--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -42,8 +42,9 @@
         font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
         font-weight: normal;
         color: #111;
-        margin: 1em;
-        line-height: .5em;
+        margin-top: .7em;
+        margin-bottom: .5em;
+        line-height: 1em;
     }
 
     h1,.h1{ font-size: 2.5em; }
@@ -54,14 +55,13 @@
     h6,.h6{
         font-size: 0.9em;
         font-weight: bold;
-        line-height: .4em;
     }
 
     em{
         font-family: Tahoma, Arial, Verdana, sans-serif;
         color: #666666;
         font-size: small;
-        padding-right: 1em;
+        margin-right: 1em;
     }
 
     blockquote{
