Start adding support for maps.
Added Leaflet via CDN.
Added some useful html classes.
Added initial javascript for initializing maps.

--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -217,3 +217,7 @@
         .icon-caret-right:before {
             content: "\f0da";
         }
+        /*** Maps ***/
+       section.extent-section div.map {
+           height: 350px;
+       }
