--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -218,6 +218,19 @@
             content: "\f0da";
         }
         /*** Maps ***/
-       section.extent-section div.map {
-           height: 350px;
-       }
+        section.extent-section div.map {
+            height: 350px;
+        }
+        /*** Side Nav ***/
+        div#sideNav {
+          position: fixed;
+          right: 10px;
+          bottom: 10px;
+          z-index: 100;
+        }
+        div#sideNav * {
+          display: block;
+        }
+        div#sideNav span {
+          margin-top: 4px;
+        }
