--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -72,6 +72,7 @@
 
         pre, code, kbd, samp { color: #000; font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 0.98em; }
         pre { white-space: pre-wrap; word-wrap: break-word; }
+        .pre-line { white-space: pre-line; }
 
         b, strong { font-weight: bold; }
 
