Refactor mdTranslator html writer module 'html_timeInstant'

--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -67,6 +67,7 @@
         }
 
         summary:focus {outline: none}
+        summary.h2 {color: #666666; font-style: italic;}
 
         hr { display: block; height: 2px; border: 0; border-top: 1px solid #aaa;border-bottom: 1px solid #eee; margin: 1em 0; padding: 0; }
 
