--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -142,7 +142,7 @@
 
         .btn, a.btn {
             display: inline-block;
-            width: 65px;
+            width: 68px;
             padding: 6px 12px;
             margin-bottom: 0;
             font-size: 14px;
@@ -213,9 +213,15 @@
         }
 
         /*** Maps ***/
-        section.extent-section div.map {
+        section.extent-geographic div.map {
             height: 350px;
         }
+
+        div.hidden {
+            visibility: hidden;
+            height: 0px;
+        }
+
         /*** Side Nav ***/
         div#sideNav {
           position: fixed;
