--- a/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
+++ b/lib/adiwg/mdtranslator/writers/html/sections/html_inlineCss.css
@@ -141,6 +141,7 @@
         }
 
         .btn, a.btn {
+            font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
             display: inline-block;
             width: 68px;
             padding: 6px 12px;
@@ -216,7 +217,6 @@
         section.extent-geographic div.map {
             height: 350px;
         }
-
         div.hidden {
             visibility: hidden;
             height: 0px;
