--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@
   </article>
   {% endfor %}
   <h3>&nbsp;</h3>
-  <iframe id="github-activity" src="http://tylerlh.github.com/github-latest-commits-widget/?username=adiwg&repo=mdTranslator&limit=5"
+  <iframe id="github-activity" src="https://tylerlh.github.com/github-latest-commits-widget/?username=adiwg&repo=mdTranslator&limit=5"
   allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
 </div><!-- /#index -->
 
