--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,6 +1,6 @@
 <span>
-  Website <em>content</em> <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/">
-    <img src="http://i.creativecommons.org/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
+  Website <em>content</em> <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
+    <img src="https://i.creativecommons.org/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
   </a>
-  , {{ site.time | date: '%Y' }} <a href="http://www.adiwg.org">ADIwg</a>. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/">Minimal Mistakes</a> theme.
+  , {{ site.time | date: '%Y' }} <a href="https://www.adiwg.org">ADIwg</a>. Powered by <a href="https://jekyllrb.com">Jekyll</a> using the <a href="https://mademistakes.com/">Minimal Mistakes</a> theme.
 </span>
